--- a/src/components/UI/Layout/Meals.css
+++ b/src/components/UI/Layout/Meals.css
@@ -1,29 +1,51 @@
-.meals{
+.meals {
     background-color: white;
     width: 70%;
 }
 
-.meals p{
+.meals p {
     margin: 0;
     padding: 0;
 }
 
-.meals h5{
+.meals h5 {
     margin: 0;
     padding: 0;
     font-weight: bold;
 }
 
-.meals li{
+.meals li {
     list-style-type: none;
 
 }
 
-.info{
+.info {
     font-style: italic;
 }
 
-.price{
+.price {
     color: #813d21;
     font-weight: bold;
 }
+
+.add-button {
+    background-color: rgb(157, 26, 26);
+    margin-top: 5px;
+    height: 1.5rem;
+    width: 5rem;
+    border-radius: 10px;
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* .button-text {
+    display: inline-block;
+    vertical-align: middle;
+    line-height: normal;
+  } */
