--- a/src/components/UI/Header/Header.css
+++ b/src/components/UI/Header/Header.css
@@ -1,10 +1,26 @@
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 5rem;
+    background-color: #8a2b06;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0 10%;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+    z-index: 10;
+}
+
 .main-image {
     width: 100%;
     height: 25rem;
     z-index: 0;
     overflow: hidden;
-  }
-  
+}
+
 .main-image img {
     width: 110%;
     height: 100%;
@@ -12,17 +28,16 @@
     transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
 }
 
-.summary{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
+.summary {
+    text-align: center;
+    width: 90%;
+    max-width: 45rem;
+    margin: auto;
+    margin-top: -10rem;
     background-color: #313131;
     border-radius: 10px;
-    z-index: 10000;
     padding: 1rem;
-    margin-top : 12rem;
-    position: absolute;
+    position: relative;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    margin-bottom: 1rem;
 }
